--- a/statistics.html
+++ b/statistics.html
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
+<h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -177,7 +177,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.sgul.ac.uk/Vacancy.aspx?ref=352-19'>
+<h5><a href='https://jobs.sgul.ac.uk/Vacancy.aspx?ref=352-19'>
 	352-19 Research Lecturer (2 posts), Lecturer in Medical Statistics (1 post), Lecturer in Infection &amp; Immunity (1 post) - Jobs at St. George's
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -191,7 +191,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -236,7 +236,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 ??. ????? ... Participate in statistical support for CRF design, database development, data 
 validation plan and blinded data review; - Performs SAS programming to 
@@ -313,7 +313,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.hr.wisc.edu/en-us/job/503146/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.hr.wisc.edu/en-us/job/503146/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -329,7 +329,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oZOK6fwn&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=nFWN7MwM'> HHB Systems Careers - Statistician/Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oZOK6fwn&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=nFWN7MwM'> HHB Systems Careers - Statistician/Data Scientist</a></h5> 
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-12</p>
 <hr/>
@@ -337,7 +337,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uva.wd1.myworkdayjobs.com/en-US/UVAJobs/job/Charlottesville-VA/Assistant-Professor-of-Statistics_R0010727-1'>Assistant Professor of Statistics</a></h5> 
+<h5><a href='https://uva.wd1.myworkdayjobs.com/en-US/UVAJobs/job/Charlottesville-VA/Assistant-Professor-of-Statistics_R0010727-1'>Assistant Professor of Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 27, 2019 ... ... at the Medical School, Quantitative Collaborative (Social Sciences), the newly 
 created School of Data Science, and other departments and schools. Faculty?...</p>
@@ -346,7 +346,7 @@ created School of Data Science, and other departments and schools. Faculty?...</
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7F688A9EE8'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7F688A9EE8'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -385,7 +385,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=s9DwRgwU&__jvsc=Twitter&bid=nDej4Mwv'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=s9DwRgwU&__jvsc=Twitter&bid=nDej4Mwv'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
@@ -425,7 +425,7 @@ files, writing application programs within a statistical software, analyzing dat
 some instances. Statistical expertise in data management, analysis of panel data,
 ?...</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/0579E35F46'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/0579E35F46'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -455,7 +455,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=najQ0MwA'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=najQ0MwA'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
@@ -487,7 +487,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/sr-statistician-68736'>Sr Statistician - Medtronic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/sr-statistician-68736'>Sr Statistician - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light">United States France Italy</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
